--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "log4js": "^6.5.2",
     "minimist": "^1.2.6",
     "mongoose": "^6.3.5",
     "passport": "^0.6.0",
