--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "log4js": "^6.5.2",
     "minimist": "^1.2.6",
     "mongoose": "^6.3.5",
+    "nodemon": "^2.0.18",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
   }
